[package]
name = "rndr-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0.1"
notify = "4.0.17"
regex = "1.5.5"
registry = "1.2.1"
reqwest = "0.11.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
windows = "0.33.0"
